Fix contrast

--- a/_sass/sections/_about.scss
+++ b/_sass/sections/_about.scss
@@ -179,7 +179,7 @@
                             left: 0;
                             top: -0.25rem;
                             font-size: 48px;
-                            color: vars.$font-color-light-grey;
+                            color: vars.$font-color-charcoal;
                             line-height: 1.0;
                         }
                     }
@@ -344,7 +344,7 @@ html
                     {
                         &::before
                         {
-                            color: vars.$font-color-grey !important;
+                            color: vars.$font-color-platinum !important;
                         }
                     }
                 }
